--- a/backend/config/default.config.yml
+++ b/backend/config/default.config.yml
@@ -24,7 +24,7 @@
 #   # Name of the site, displayed in the title tag
 #   siteName: "Dora the Explorer"
 #   siteSubtitle: ""
-  
+
 #   # link to EL Explorer
 #   ethExplorerLink: ""
 
@@ -39,16 +39,16 @@
 #   showSubmitDeposit: false
 #   showSubmitElRequests: false
 #   publicRpcUrl: "http://127.0.0.1:8545"
-  
+
 #   # DAS Guardian configuration
 #   #disableDasGuardianCheck: false     # Disable DAS Guardian completely (default: false - enabled)
 #   #enableDasGuardianMassScan: false   # Enable mass DAS Guardian scanning (default: false - disabled)
-  
+
 leanapi:
   # lean node rpc endpoints
   endpoints:
-    - name: "local"
-      url: "http://127.0.0.1:5052"
+    - name: "ream-1"
+      url: "http://host.docker.internal:5052"
 
   # local cache for page models
   # localCacheSize: 100 # 100MB
@@ -62,7 +62,7 @@ leanapi:
 #   endpoints:
 #     - name: "local"
 #       url: "http://127.0.0.1:8545"
-  
+
 #   logBatchSize: 1000
 #   depositDeployBlock: 0 # el block number from where to crawl the deposit contract (should be <=, but close to the deposit contract deployment block)
 #   electraDeployBlock: 0 # el block number from where to crawl the electra system contracts (should be <=, but close to electra fork activation block)
@@ -93,7 +93,6 @@ leanapi:
 # database configuration
 database:
   file: "./lean-view-db.sqlite"
-
 # # separate block db for storing block bodies (no archive beacon node required)
 # blockDb:
 #   engine: "none" # pebble / s3 / none (disable block db)
